--- a/app/views/filters/_assignees.html.erb
+++ b/app/views/filters/_assignees.html.erb
@@ -25,7 +25,7 @@
         <% end %>
 
         <%= link_to cards_path(filter.as_params.except(:assignee_ids, :assignment_status).merge(expand_all: @expand_all)), class: "btn popup__item" do %>
-          <span class="overflow-ellipsis">Clear all</span>
+          <span class="overflow-ellipsis">Deselect all</span>
         <% end %>
 
         <div class="btn popup__item">
